# iLog

./: .env.dist  .env.example  .gitignore  .gitlab-ci.yml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  ilog-kubernetes  package.json
.github/: FUNDING.yml
.github/workflows/: agent-binaries.yml  backend-docker.yml  frontend-docker.yml  reusable-docker-build.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 001_initial_schema.sql  002_services_and_agents.sql  002_services_and_rbac.sql  003_compression_and_retention.sql  003_timescaledb_optimization.sql  004_registration_tokens.sql  005_better_auth_compatibility.sql
backend/src/: analytics.rs  auth.rs  db.rs  main.rs  models.rs  otel.rs  services.rs  streaming.rs  tcp_server.rs
frontend/: .dockerignore  .env.example  .gitkeep  Dockerfile  README.md  biome.json  docker-entrypoint.sh  next.config.ts  package.json  tsconfig.json
frontend/better-auth_migrations/: 2025-12-31T23-47-00.000Z.sql
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...all]/: route.ts
frontend/src/app/api/proxy/[...path]/: route.ts
frontend/src/app/dashboard/: dashboard.css  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/app/services/[id]/tokens/: page.tsx
frontend/src/app/tokens/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/: ConfirmDialog.tsx  CopyButton.tsx  DataTable.tsx  EmptyState.tsx  Footer.tsx  LayoutContent.tsx  LogoutButton.tsx  LogsTable.tsx  Navigation.tsx  ServiceSelector.tsx  Sidebar.tsx  theme-provider.tsx
frontend/src/components/dashboard/: AgentsList.tsx  DailyIngestionChart.tsx  LogVolumeChart.tsx  MetricCard.tsx  StorageByService.tsx
frontend/src/components/log-renderers/: DockerLogRow.tsx  FileLogRow.tsx  HttpLogRow.tsx  JournaldLogRow.tsx  LogRow.tsx  LogTableHeaders.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  select.tsx  switch.tsx  table.tsx  textarea.tsx  tooltip.tsx
frontend/src/lib/: auth-client.ts  auth.ts  log-utils.ts  runtime-config.ts  server-config.ts  utils.ts
frontend/src/lib/api/: dashboard.ts
frontend/src/types/: log.ts
ilog-agent/: Cargo.toml  DEPLOYMENT.md  PROTOCOL.md  README.md  ilog.toml.example  install.sh  uninstall.sh
ilog-agent/src/: config.rs  crypto.rs  main.rs  protocol.rs  sender.rs  tcp_sender.rs
ilog-agent/src/providers/: docker.rs  file.rs  mod.rs  systemd.rs
ilog-agent/src/sources/: docker.rs  file.rs  journald.rs  mod.rs
