[package]
name = "ilog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "logs"] }
opentelemetry_sdk = { version = "0.21", features = ["logs", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.13"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
sha2 = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Encryption and compression (for agent TCP protocol)
chacha20poly1305 = "0.10"
lz4_flex = "0.11"
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
