[package]
name = "ilog-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Config
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# File watching
notify = { version = "6", optional = true }

# Journald (Linux systemd)
systemd = { version = "0.10", optional = true }

# Docker
bollard = { version = "0.17", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex
regex = "1.10"

# Async trait for providers
async-trait = "0.1"

# File watching and globbing
glob = "0.3"

[features]
default = ["file"]
file = ["notify"]
journald = ["systemd"]
docker = ["bollard"]
all = ["file", "docker"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
